[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/characters/enemy1/Enemy1.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/levels/level4/Level4Landscape.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/characters/player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/levels/level4/Level4.gd" type="Script" id=4]
[ext_resource path="res://src/objects/IgnisRegularLevel/IgnisRegularLevel.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/objects/mechanism/Mechanism.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/objects/lever/Lever.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/objects/heart/Heart.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/ui/gameOverWindow/WindowGameOver.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/ui/pauseMenu/pauseMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/ui/winWindow/WinWindow.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/ui/HUD/HUD.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/objects/IgnisSectorOuter/IgnisSectorOuter.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/ui/inventory/Inventory.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/ui/visualHit/Hit.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/objects/fuel/fuel.tscn" type="PackedScene" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 24 )

[node name="Level4" type="Node2D"]
position = Vector2( -128, -608 )
script = ExtResource( 4 )

[node name="Level4Landscape" parent="." instance=ExtResource( 2 )]
position = Vector2( 128, 608 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 272, 1076 )

[node name="Ignises" type="Node2D" parent="."]
position = Vector2( 128, 608 )

[node name="IgnisDoor1" parent="Ignises" instance=ExtResource( 5 )]
position = Vector2( 584, 480 )
type = "column"
health_at_start = 2

[node name="IgnisDoor2" parent="Ignises" instance=ExtResource( 5 )]
position = Vector2( 1392, 568 )
type = "column"

[node name="IgnisDoor3" parent="Ignises" instance=ExtResource( 5 )]
position = Vector2( 1664, -216 )
type = "column"

[node name="IgnisRegularLevel1" parent="Ignises" instance=ExtResource( 5 )]
position = Vector2( 536, 384 )
health_at_start = 2

[node name="IgnisRegularLevel2" parent="Ignises" instance=ExtResource( 5 )]
position = Vector2( 1016, 544 )
health_at_start = 3

[node name="IgnisRegularLevel4" parent="Ignises" instance=ExtResource( 5 )]
position = Vector2( 880, 384 )

[node name="IgnisRegularLevel5" parent="Ignises" instance=ExtResource( 5 )]
position = Vector2( 1768, 288 )

[node name="IgnisRegularLevel7" parent="Ignises" instance=ExtResource( 5 )]
position = Vector2( 744, -160 )
health_at_start = 2

[node name="IgnisRegularLevel8" parent="Ignises" instance=ExtResource( 5 )]
position = Vector2( 1248, -160 )

[node name="IgnisRegularLevel10" parent="Ignises" instance=ExtResource( 5 )]
position = Vector2( 1496, -368 )
health_at_start = 3

[node name="IgnisRegularLevel11" parent="Ignises" instance=ExtResource( 5 )]
position = Vector2( 1504, -272 )
health_at_start = 1

[node name="Enemies" type="Node2D" parent="."]
position = Vector2( 128, 608 )

[node name="Enemy" parent="Enemies" instance=ExtResource( 1 )]
position = Vector2( 277, 395 )
start_mode = 1

[node name="Enemy2" parent="Enemies" instance=ExtResource( 1 )]
position = Vector2( 1016, -120 )

[node name="Enemy3" parent="Enemies" instance=ExtResource( 1 )]
position = Vector2( 1797, -309 )
glance_dir = -1
start_mode = 1
run_speed = 115

[node name="Objects" type="Node2D" parent="."]
position = Vector2( 128, 608 )

[node name="Lever" parent="Objects" instance=ExtResource( 7 )]
position = Vector2( 1528, -376 )

[node name="Mechanism" parent="Objects" instance=ExtResource( 6 )]
position = Vector2( 1336, 564 )

[node name="IgnisSectorOuter" parent="Objects" instance=ExtResource( 13 )]
position = Vector2( 1808, -80 )

[node name="Hearts" type="Node2D" parent="."]
position = Vector2( 128, 608 )

[node name="Heart2" parent="Hearts" instance=ExtResource( 8 )]
position = Vector2( 1664, -304 )

[node name="Heart3" parent="Hearts" instance=ExtResource( 8 )]
position = Vector2( 368, -288 )

[node name="Fuel" type="Node2D" parent="."]

[node name="Fuel" parent="Fuel" instance=ExtResource( 16 )]
position = Vector2( 984, 800 )

[node name="PauseMenu" parent="." instance=ExtResource( 10 )]

[node name="WinWindow" parent="." instance=ExtResource( 11 )]

[node name="WindowGameOver" parent="." instance=ExtResource( 9 )]

[node name="HUD" type="CanvasLayer" parent="."]
layer = 2

[node name="HUD" parent="HUD" instance=ExtResource( 12 )]
anchor_left = -0.1
anchor_top = -0.844444
anchor_right = 0.9
anchor_bottom = -0.697222
margin_left = 128.0
margin_top = 608.0
margin_right = 128.0
margin_bottom = 608.0

[node name="Win" type="Area2D" parent="."]
position = Vector2( 1720, 1168 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Win"]
shape = SubResource( 1 )

[node name="End" type="Area2D" parent="."]
position = Vector2( 2176, 1168 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="End"]
shape = SubResource( 1 )

[node name="Inventory" parent="." instance=ExtResource( 14 )]

[node name="Hit" parent="." instance=ExtResource( 15 )]
[connection signal="hint_activate" from="Level4Landscape" to="." method="_on_Level4Landscape_hint_activate"]
[connection signal="hint_disactivate" from="Level4Landscape" to="." method="_on_Level4Landscape_hint_disactivate"]
[connection signal="die" from="Player" to="." method="_on_Player_die"]
[connection signal="body_entered" from="Win" to="." method="_on_Win_body_entered"]
[connection signal="body_entered" from="End" to="." method="_on_End_body_entered"]
